# owls

./: .readthedocs.yml  MANIFEST.in  README.rst  build_target_pages.py  capture_archive.py  pyproject.toml  setup.cfg  setup.py  tox.ini
docs/: conf.py  download_figures.py  index.rst  requirements.txt
docs/owls/: background.rst  db.html  sindices.rst  survey.rst  targets.rst
docs/owls/figures/: bp.py
docs/owls/targets/: 1Lac.rst  55Cnc.rst  77Peg.rst  8And.rst  ACDra.rst  ADLeo.rst  CoRoT-7.rst  DSLeo.rst  EPIC211945201.rst  EQPeg.rst  EVLac.rst  GJ1054A.rst  GJ1257.rst  GJ1284.rst  GJ140A.rst  GJ166C.rst  GJ176.rst  GJ182.rst  GJ2069A.rst  GJ2079.rst  GJ234A.rst  GJ278C.rst  GJ29.1.rst  GJ3203.rst  GJ3218.rst  GJ338A.rst  GJ338B.rst  GJ3470.rst  GJ3481.rst  GJ3482.rst  GJ3522.rst  GJ362.rst  GJ4020.rst  GJ4337.rst  GJ487.rst  GJ490A.rst  GJ494.rst  GJ581.rst  GJ649.rst  GJ699.rst  (+238 more)
owls/: version.py
owls/data/: owls.csv  sindices.csv
