[metadata]
name = owls
author = Brett M. Morris
author_email = morrisbrettm@gmail.com
license = GNU GPL v3+
license_file = licenses/LICENSE.rst
url = https://github.com/bmorris3/owls
description = Olin Wilson Legacy Survey
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires = 
    astropy


[options.extras_require]
all =
test =
    pytest
    pytest-doctestplus
    pytest-cov
docs =
    numpy
    sphinx
    sphinx-automodapi
    bokeh
    astropy
    pandas
    matplotlib
    altair
    pydata-sphinx-theme==0.8.1
    sphinx-book-theme==0.3.3

[options.package_data]
owls = data/*

[tool:pytest]
testpaths = "owls" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst

[coverage:run]
omit =
  owls/__init*
  owls/conftest.py
  owls/*setup_package*
  owls/tests/*
  owls/*/tests/*
  owls/extern/*
  owls/version*
  */owls/__init*
  */owls/conftest.py
  */owls/*setup_package*
  */owls/tests/*
  */owls/*/tests/*
  */owls/extern/*
  */owls/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
